--- a/src/app/styles/_typography.scss
+++ b/src/app/styles/_typography.scss
@@ -1,24 +1,24 @@
 @font-face {
   font-family: "Bebas Neue";
-  src: url("../../fonts/bebasneuepro-thin.otf") format("opentype");
+  src: url("../../fonts/BebasNeueThin.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
 }
 @font-face {
   font-family: "Bebas Neue";
-  src: url("../../fonts/bebasneuepro-light.otf") format("opentype");
+  src: url("../../fonts/BebasNeueLight.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: "Bebas Neue";
-  src: url("../../fonts/bebasneuepro-regular.otf") format("opentype");
+  src: url("../../fonts/BebasNeueRegular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "Bebas Neue";
-  src: url("../../fonts/bebasneuepro-bold.otf") format("opentype");
+  src: url("../../fonts/BebasNeueBold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
