--- a/src/app/styles/_typography.scss
+++ b/src/app/styles/_typography.scss
@@ -3,22 +3,26 @@
   src: url("../../fonts/BebasNeueThin.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Bebas Neue";
   src: url("../../fonts/BebasNeueLight.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Bebas Neue";
   src: url("../../fonts/BebasNeueRegular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Bebas Neue";
   src: url("../../fonts/BebasNeueBold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
